@@ -13,6 +13,11 @@
 }
 
 \section{version 0.8.3}{
+  \subsection{Solved BUGS}{
+    \itemize{
+      \item the previous released introduced an error in how the variance of the assignment test is computed in the absence of calibration (with important consequence in terms of assignments). This is now fixed (#151).
+    }
+  }
   \subsection{Minor change}{
     \itemize{
       \item the base package 'colourspace' is now suggested to avoid a note in R CMD check.
